--- a/copo-nieve.qmd
+++ b/copo-nieve.qmd
@@ -13,9 +13,15 @@ La siguiente figura ilustra el proceso para las 5 primeras iteraciones.
 
 ![Creación del fractal del copo de nieve.](img/series/copo-nieve.png)
 
-a. Estudiar la convergencia de la sucesión del número de lados. 
-b. Estudiar la convergencia de la sucesión de la longitud de los lados.
-c. Estudiar la convergencia de la sucesión del perímetro del copo de nieve.
-d. Calcular el area del copo de nieve en la etapa $n$.
-e. Calcular el area total del fractal del copo de nieve (cuando $n\to \infty$).
+## Tareas
+
+1. Estudiar la convergencia de la sucesión del número de lados. 
+
+1. Estudiar la convergencia de la sucesión de la longitud de los lados.
+
+1. Estudiar la convergencia de la sucesión del perímetro del copo de nieve.
+
+1. Calcular el area del copo de nieve en la etapa $n$.
+
+1. Calcular el area total del fractal del copo de nieve (cuando $n\to \infty$).
 
