--- a/img/tikz/figura.tex
+++ b/img/tikz/figura.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{mathptmx}
+\usepackage{listofitems} % for \readlist to create arrays
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usepgfplotslibrary{colormaps}
@@ -51,31 +52,45 @@
 
 \tikzset{export as png}
 
-\tikzsetnextfilename{esfera}
+\tikzsetnextfilename{red-neuronas}
 \begin{tikzpicture}
-    \begin{axis}
-    [   axis equal,
-        axis lines=center,
-        xmin = -2, xmax = 2,
-        ymin = -2, ymax = 2, 
-        zmin = -2, zmax = 2,
-        xtick = {-1,0,1},
-        ytick = {-1,0,1},
-        ztick = {-1,0,1},
-        %axis on top,
-        view={30}{30},
-        z buffer=sort,
-        colormap name = bluemap,
-        scale = 2
-    ]
-        \addplot3
-        [   domain = -2:2,
-            y domain = -2:2,
-            surf,
-            shader=faceted interp,
-            opacity=0.5,
-        ] (x, y, x^2+y^2);
-    \end{axis}
+    % Define styles for layers and biases
+    \tikzstyle{neuron}=[circle, draw, minimum size=1cm]
+    \tikzstyle{input neuron}=[neuron, fill=green!30]
+    \tikzstyle{hidden neuron}=[neuron, fill=blue!30]
+    \tikzstyle{output neuron}=[neuron, fill=red!30]
+    \tikzstyle{bias neuron}=[neuron, fill=gray!30, minimum size=0.8cm]
+    
+    % Input layer
+    \node[input neuron] (I-1) at (0,1.5) {$x_1$};
+    \node[input neuron] (I-2) at (0,-1.5) {$x_2$};
+    \node[bias neuron] (B-I) at (0, 3) {1};
+
+    % Hidden layer
+    \node[hidden neuron] (H-1) at (3,1.5) {$y_1$};
+    \node[hidden neuron] (H-2) at (3,-1.5) {$y_2$};
+    \node[bias neuron] (B-H) at (3, 3) {1};
+
+    % Output layer
+    \node[output neuron] (O-1) at (6,1.5) {$z_1$};
+    \node[output neuron] (O-2) at (6,-1.5) {$z_2$};
+
+    % Connections: Input to Hidden layer with weights
+    \foreach \i/\j in {1/1, 1/2, 2/1, 2/2} {
+        \draw[->] (I-\i) -- (H-\j) node[midway, above, sloped] { $w^1_{\i,\j}$ };
+    }
+    \foreach \j in {1,2} {
+        \draw[->] (B-I) -- (H-\j) node[midway, above right] {$w^1_{0,\j}$};
+    }
+
+    % Connections: Hidden to Output layer with weights
+    \foreach \i/\j in {1/1, 1/2, 2/1, 2/2} {
+        \draw[->] (H-\i) -- (O-\j) node[midway, above, sloped] { $w^2_{\i,\j}$ };
+    }
+    \foreach \j in {1,2} {
+        \draw[->] (B-H) -- (O-\j) node[midway, above right] {$w^2_{0,\j}$};
+    }
+
 \end{tikzpicture}
 \end{document}
 
