--- a/talleres-analisis.tex
+++ b/talleres-analisis.tex
@@ -42,14 +42,28 @@
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{5}
 % Make \paragraph and \subparagraph free-standing
+\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}{
+    \@ifstar
+      \xxxParagraphStar
+      \xxxParagraphNoStar
+  }
+  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
+  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}{
+    \@ifstar
+      \xxxSubParagraphStar
+      \xxxSubParagraphNoStar
+  }
+  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
+  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
+\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -90,9 +104,6 @@
 \DeclareMathOperator{\Ac}{Ac}
 \DeclareMathOperator{\sen}{sen}
 \makeatletter
-\@ifpackageloaded{tikz}{}{\usepackage{tikz}}
-\makeatother
-\makeatletter
 \@ifpackageloaded{bookmark}{}{\usepackage{bookmark}}
 \makeatother
 \makeatletter
@@ -131,19 +142,13 @@
 \newcommand*\listoflistings{\listof{codelisting}{Listado de Listados}}
 \makeatother
 \makeatletter
+\@ifpackageloaded{tikz}{}{\usepackage{tikz}}
+\makeatother
+\makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\makeatletter
-\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
-\makeatother
-\makeatletter
-\@ifundefined{shadecolor}{\definecolor{shadecolor}{rgb}{.97, .97, .97}}
-\makeatother
-\makeatletter
-\makeatother
-\makeatletter
-\makeatother
+
 \ifLuaTeX
 \usepackage[bidi=basic]{babel}
 \else
@@ -156,7 +161,8 @@
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\usepackage{bookmark}
+
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
@@ -169,6 +175,7 @@
   citecolor={Blue},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
+
 
 \title{Talleres de Análisis Matemático}
 \author{Alfredo Sánchez Alberca}
@@ -202,18 +209,17 @@ Sánchez
 Alberca}\\ \textsf{asalber@ceu.es} \\ \textsf{https://aprendeconalf.es}}
 \end{tabular}
 \end{flushleft}
-\end{titlepage}\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}, interior hidden, boxrule=0pt, sharp corners]}{\end{tcolorbox}}\fi
-
+\end{titlepage}
 \renewcommand*\contentsname{Tabla de contenidos}
 {
 \hypersetup{linkcolor=}
 \setcounter{tocdepth}{2}
 \tableofcontents
 }
+
 \bookmarksetup{startatroot}
 
-\hypertarget{prefacio}{%
-\chapter*{Prefacio}\label{prefacio}}
+\chapter*{Prefacio}\label{prefacio}
 \addcontentsline{toc}{chapter}{Prefacio}
 
 \markboth{Prefacio}{Prefacio}
@@ -222,9 +228,8 @@ Colección de talleres de Análisis Matemático aplicado.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{cuxe1lculo-del-peruxedmetro-y-el-uxe1rea-del-cuxedrculo}{%
 \chapter{Cálculo del perímetro y el área del
-círculo}\label{cuxe1lculo-del-peruxedmetro-y-el-uxe1rea-del-cuxedrculo}}
+círculo}\label{cuxe1lculo-del-peruxedmetro-y-el-uxe1rea-del-cuxedrculo}
 
 En el siglo III A.C
 \href{https://es.wikipedia.org/wiki/Arqu\%C3\%ADmedes}{Arquímedes} usó
@@ -235,7 +240,7 @@ por agotamiento} para calcular el área encerrada por una circunferencia
 circunferencia en polígonos regulares con un número de lados cada vez
 mayor.
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/area-circulo/poligonos-circunferencia.png}
 
@@ -244,25 +249,18 @@ mayor.
 \caption{Aproximación del área de una circunferencia mediante polígonos
 regulares}
 
-\end{figure}
+\end{figure}%
 
 El área de estos polígonos puede calcularse fácilmente descomponiendo
 los polígonos regulares en triángulos como en el siguiente ejemplo.
 
 \begin{figure}
-
-{\centering 
-
+\centering
 \input{img/area-circulo/area-poligono-regular-inscrito.tex}
-
-}
-
 \caption{Descomposición de un hexágono en triángulos}
-
 \end{figure}
 
-\hypertarget{tareas}{%
-\section{Tareas}\label{tareas}}
+\section{Tareas}\label{tareas}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -285,9 +283,8 @@ los polígonos regulares en triángulos como en el siguiente ejemplo.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{anuxe1lisis-del-fractal-del-copo-de-nieve}{%
 \chapter{Análisis del fractal del copo de
-nieve}\label{anuxe1lisis-del-fractal-del-copo-de-nieve}}
+nieve}\label{anuxe1lisis-del-fractal-del-copo-de-nieve}
 
 El fractal del copo de nieve se construye partiendo de un triángulo
 equilátero y alterando, de forma recursiva, cada segmento de línea de
@@ -307,7 +304,7 @@ las siguiente manera:
 
 La siguiente figura ilustra el proceso para las 5 primeras iteraciones.
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/series/copo-nieve.png}
 
@@ -315,10 +312,9 @@ La siguiente figura ilustra el proceso para las 5 primeras iteraciones.
 
 \caption{Creación del fractal del copo de nieve.}
 
-\end{figure}
+\end{figure}%
 
-\hypertarget{tareas-1}{%
-\section{Tareas}\label{tareas-1}}
+\section{Tareas}\label{tareas-1}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -338,8 +334,7 @@ La siguiente figura ilustra el proceso para las 5 primeras iteraciones.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{sumas-de-riemann}{%
-\chapter{Sumas de Riemann}\label{sumas-de-riemann}}
+\chapter{Sumas de Riemann}\label{sumas-de-riemann}
 
 El cálculo de áreas encerradas por regiones del plano curvas ya fue
 estudiado en la antigua Grecia. Una de las técnicas desarrolladas en
@@ -383,8 +378,7 @@ Para ello hay que seguir los siguientes pasos:
 
 \includegraphics{img/sumas-riemann/parabola-figure0.pdf}
 
-\hypertarget{fuxf3rmulas-de-ayuda}{%
-\subsection{Fórmulas de ayuda}\label{fuxf3rmulas-de-ayuda}}
+\subsection{Fórmulas de ayuda}\label{fuxf3rmulas-de-ayuda}
 
 \[
 \sum_{i=1}^n i = \dfrac{n(n+1)}{2}\qquad \sum_{i=1}^n i^2 = \dfrac{n(n+1)(2n+1)}{6}
@@ -392,9 +386,8 @@ Para ello hay que seguir los siguientes pasos:
 
 \bookmarksetup{startatroot}
 
-\hypertarget{teorema-fundamental-del-cuxe1lculo}{%
 \chapter{Teorema Fundamental del
-Cálculo}\label{teorema-fundamental-del-cuxe1lculo}}
+Cálculo}\label{teorema-fundamental-del-cuxe1lculo}
 
 El
 \href{https://aprendeconalf.es/analisis-manual/09-integrales.html\#thm-teorema-fundamental-calculo-1}{Teorema
@@ -403,8 +396,7 @@ el siglo XVIII y establece el vínculo entre el Cálculo Diferencial y el
 Cálculo Integral, que hasta entonces se habían desarrollado por caminos
 muy diferentes.
 
-\hypertarget{tareas-2}{%
-\section{Tareas}\label{tareas-2}}
+\section{Tareas}\label{tareas-2}
 
 En este taller trataremos de comprender esta conexión entre la derivada
 y la integral estudiando cómo varía el área y volumen de algunas figuras
@@ -445,10 +437,9 @@ geométricas sencillas.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{cauxedda-libre}{%
-\chapter{Caída libre}\label{cauxedda-libre}}
+\chapter{Caída libre}\label{cauxedda-libre}
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/caida-libre/wingsuit.jpg}
 
@@ -456,7 +447,7 @@ geométricas sencillas.
 
 \caption{Traje de alas (wingsuit) para planear.}
 
-\end{figure}
+\end{figure}%
 
 Julia es una paracaidista apasionada. Tiene más de 300 saltos en su
 haber y ha dominado el arte de cambiar la posición de su cuerpo en el
@@ -474,8 +465,7 @@ que alcanza la velocidad límite. Cuando alcanza la velocidad límite, su
 velocidad se mantiene constante hasta que tira de la cuerda de seguridad
 y reduce la velocidad para aterrizar.
 
-\hypertarget{tareas-3}{%
-\section{Tareas}\label{tareas-3}}
+\section{Tareas}\label{tareas-3}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -519,8 +509,7 @@ y reduce la velocidad para aterrizar.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{voluxfamenes-de-revoluciuxf3n}{%
-\chapter{Volúmenes de revolución}\label{voluxfamenes-de-revoluciuxf3n}}
+\chapter{Volúmenes de revolución}\label{voluxfamenes-de-revoluciuxf3n}
 
 Los \emph{volúmenes} o \emph{sólidos de revolución} son figuras
 geométricas en el espacio real que se obtienen rotando una función
@@ -532,8 +521,7 @@ de volúmenes de figuras geométricas regulares, típicamente cilindros o
 anillos, y en última instancia puede calcularse mediante integrales
 definidas.
 
-\hypertarget{tareas-4}{%
-\section{Tareas}\label{tareas-4}}
+\section{Tareas}\label{tareas-4}
 
 En este taller se propone realizar el cálculo de los siguientes
 volúmenes de revolución usando distintas estrategias para descomponer el
@@ -555,8 +543,7 @@ estas figuras en distintos tipos de figuras geométricas regulares.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{peraltado-de-curvas}{%
-\chapter{Peraltado de curvas}\label{peraltado-de-curvas}}
+\chapter{Peraltado de curvas}\label{peraltado-de-curvas}
 
 Cuando un vehículo toma una curva experimenta siempre una fuerza en
 dirección hacia el exterior de la curva, que se conoce como \emph{fuerza
@@ -567,7 +554,7 @@ fuerza con otra opuesta, que normalmente proporciona el agarre de los
 neumáticos a la carretera o bien el peralte de la curva, que consiste en
 inclinar un poco la curva, proporcionándole una pequeña pendiente.
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/peraltado/peralte.jpeg}
 
@@ -575,13 +562,12 @@ inclinar un poco la curva, proporcionándole una pequeña pendiente.
 
 \caption{Curva peraltada}
 
-\end{figure}
+\end{figure}%
 
 En este taller veremos cómo calcular la velocidad máxima a la que puede
 tomarse una curva en función de la inclinación del peralte.
 
-\hypertarget{tareas-5}{%
-\section{Tareas}\label{tareas-5}}
+\section{Tareas}\label{tareas-5}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -608,9 +594,8 @@ tomarse una curva en función de la inclinación del peralte.
 
 \bookmarksetup{startatroot}
 
-\hypertarget{aprendizaje-de-un-perceptruxf3n}{%
 \chapter{Aprendizaje de un
-perceptrón}\label{aprendizaje-de-un-perceptruxf3n}}
+perceptrón}\label{aprendizaje-de-un-perceptruxf3n}
 
 Un \href{https://es.wikipedia.org/wiki/Perceptr\%C3\%B3n}{perceptrón} es
 un tipo de neurona artificial utilizada las
@@ -618,7 +603,7 @@ un tipo de neurona artificial utilizada las
 neuronales artificiales}. Fue desarrollado por Frank Rosenblatt en 1957
 como un modelo simplificado de una neurona biológica.
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/perceptron/perceptron-mark-1.jpeg}
 
@@ -627,7 +612,7 @@ como un modelo simplificado de una neurona biológica.
 \caption{Primera implementación hardware de un perceptrón (Mark I)
 desarrollado por Frank Rosenblatt en 1957.}
 
-\end{figure}
+\end{figure}%
 
 Un perceptrón consta de los siguientes elementos:
 
@@ -673,7 +658,7 @@ Un perceptrón consta de los siguientes elementos:
   ser la entrada de la siguiente neurona en la red.
 \end{itemize}
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics{img/perceptron/perceptron.pdf}
 
@@ -681,7 +666,7 @@ Un perceptrón consta de los siguientes elementos:
 
 \caption{Perceptrón con dos entradas}
 
-\end{figure}
+\end{figure}%
 
 Para entrenar al perceptrón de la figura se utiliza una colección de
 \(n\) ejemplos \((x_i,y_i,z_i)\) para los que se conoce la el valor real
@@ -712,8 +697,7 @@ Cuando se acaba con la colección de ejemplos se vuelve a repetir el
 procedimiento hasta que el error sea lo suficientemente pequeño o se
 alcance un número preestablecido de iteraciones.
 
-\hypertarget{tareas-6}{%
-\section{Tareas}\label{tareas-6}}
+\section{Tareas}\label{tareas-6}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -740,10 +724,26 @@ alcance un número preestablecido de iteraciones.
   1 & 1 & 1 \\
   \end{longtable}
 \item
-  ¿Cómo influye la tasa de aprendizaje \(eta\) en el ajuste de los
+  ¿Cómo influye la tasa de aprendizaje \(\eta\) en el ajuste de los
   pesos? ¿Cómo debería ser la tasa de aprendizaje para que el algoritmo
   converja hacia el mínimo error?
+\item
+  Generalizar las fórmulas de actualización de los pesos para una red
+  neuronal con dos entradas, una capa de neuronas intermedia con dos
+  neuronas y dos neuronas de salida, como la de la siguiente figura.
 \end{enumerate}
+
+\begin{figure}[H]
+
+{\centering \includegraphics[width=4.16667in,height=\textheight]{img/perceptron/red-neuronas.pdf}
+
+}
+
+\caption{Red neuronal con dos entradas, una capa intermedia con dos
+neuronas y dos neuronas de salida}
+
+\end{figure}%
+
 
 
 
